[gd_scene load_steps=10 format=3 uid="uid://bywuygc0nn732"]

[ext_resource type="Texture2D" uid="uid://hyygip2idm7o" path="res://content/materials/texture/scanlines.png" id="1_dca6n"]
[ext_resource type="Script" uid="uid://n01kda6fphjj" path="res://content/props/radar/radar_screen.gd" id="1_ldmkw"]
[ext_resource type="FontFile" uid="uid://bk43io2mlfli4" path="res://gui/CascadiaCode-Medium.ttf" id="2_okwmu"]

[sub_resource type="Gradient" id="Gradient_wdt3v"]
colors = PackedColorArray(0.10965957, 0.19999999, 0.0070938105, 1, 0.17142148, 0.236, 0.026983397, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_dca6n"]
gradient = SubResource("Gradient_wdt3v")
width = 200
height = 150
fill_from = Vector2(1, 1)

[sub_resource type="Gradient" id="Gradient_okwmu"]
offsets = PackedFloat32Array(0, 0.53575796, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_tcyr8"]
gradient = SubResource("Gradient_okwmu")
fill_from = Vector2(1, 1)

[sub_resource type="Gradient" id="Gradient_dca6n"]
offsets = PackedFloat32Array(0.582896, 0.8859263, 1)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 0.26155242, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ldmkw"]
gradient = SubResource("Gradient_dca6n")
width = 200
height = 150
fill = 2
fill_from = Vector2(0.5, 0.5)

[node name="RadarScreen" type="Node2D"]
script = ExtResource("1_ldmkw")

[node name="BG" type="ColorRect" parent="."]
offset_right = 200.0
offset_bottom = 150.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Content" type="Node2D" parent="."]

[node name="BG" type="Sprite2D" parent="Content"]
texture = SubResource("GradientTexture2D_dca6n")
centered = false

[node name="Label" type="Label" parent="Content"]
texture_filter = 2
offset_left = 13.0
offset_top = 9.0
offset_right = 192.0
offset_bottom = 142.0
theme_override_colors/font_color = Color(0.9139762, 1, 0, 1)
theme_override_fonts/font = ExtResource("2_okwmu")
theme_override_font_sizes/font_size = 13
text = "> Signal Station 1
>
> Reboot Code
> 523567"
visible_characters = 0
visible_ratio = 0.0

[node name="Scanline1" type="Sprite2D" parent="Content"]
modulate = Color(0.8770602, 1, 0.017228365, 0.09019608)
position = Vector2(0, 150)
scale = Vector2(3.28125, 0.25)
texture = SubResource("GradientTexture2D_tcyr8")
centered = false

[node name="Scanline2" type="Sprite2D" parent="Content"]
modulate = Color(0.044283334, 0.05, 0.0009999991, 0.19607843)
position = Vector2(0, -3.9999924)
scale = Vector2(3.265625, 0.0625)
texture = SubResource("GradientTexture2D_tcyr8")
centered = false

[node name="Scanline3" type="Sprite2D" parent="Content"]
modulate = Color(0, 0, 0, 0.28627452)
position = Vector2(0, 25)
scale = Vector2(3.28125, 0.75)
texture = SubResource("GradientTexture2D_tcyr8")
centered = false

[node name="BG2" type="Sprite2D" parent="Content"]
texture = SubResource("GradientTexture2D_ldmkw")
centered = false

[node name="TextureRect" type="TextureRect" parent="Content"]
modulate = Color(1, 1, 1, 0.11764706)
custom_minimum_size = Vector2(200, 150)
offset_right = 200.0
offset_bottom = 150.0
mouse_filter = 2
texture = ExtResource("1_dca6n")
stretch_mode = 1
